# shadoks-CGSHOP2023

./: CMakeLists.txt  LICENSE  README.md  convex.hpp  edgebag.hpp  extrapoints.hpp  instance.hpp  maximal.hpp  setcover.hpp  solution.hpp  solver.cpp  tools.hpp  witness.hpp
